Source/bmalloc/bmalloc/bmalloc.cpp
@@ -54,6 +54,13 @@ void* tryLargeZeroedMemalignVirtual(size_t alignment, size_t size, HeapKind kind
     {
         std::lock_guard<Mutex> lock(Heap::mutex());
         result = heap.tryAllocateLarge(lock, alignment, size);
+        if (result) {
+            // Don't track this as dirty memory that dictates how we drive the scavenger.
+            // FIXME: We should make it so that users of this API inform bmalloc which
+            // pages they dirty:
+            // https://bugs.webkit.org/show_bug.cgi?id=184207
+            heap.externalDecommit(lock, result, size);
+        }
     }
 
     if (result)
@@ -61,11 +68,13 @@ void* tryLargeZeroedMemalignVirtual(size_t alignment, size_t size, HeapKind kind
     return result;
 }
 
-void freeLargeVirtual(void* object, HeapKind kind)
+void freeLargeVirtual(void* object, size_t size, HeapKind kind)
 {
     kind = mapToActiveHeapKind(kind);
     Heap& heap = PerProcess<PerHeapKind<Heap>>::get()->at(kind);
     std::lock_guard<Mutex> lock(Heap::mutex());
+    // Balance out the externalDecommit when we allocated the zeroed virtual memory.
+    heap.externalCommit(lock, object, size);
     heap.deallocateLarge(lock, object);
 }
 
